--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ window.addEventListener('resize', updateTable);
 
                  <div class="main-content">
              <div data-id="compare" class="vsc-table-module compare-chart-pro tile-section bg-light">
-               <h2 style="text-align:center"> Our Compeetitors</h2>
+               <h2 style="text-align:center"> Our Competitors</h2>
                 <div class="compare-chart-xs-no-space">
                    <div class="compare-chart-xs-no-space">
                       <div class="row">
@@ -423,22 +423,22 @@ window.addEventListener('resize', updateTable);
                                      class="compare-chart-header"
                                      -->
                                      <th  style="width: auto ">
-                                        <h4 >
+                                        <h4 style="text-align:center;">
                                            Cypherock
                                         </h4>
                                      </th>
                                      <th  style="width:auto ">
-                                        <h4 >
+                                        <h4 style="text-align:center;">
                                            Ledger Nano S
                                         </h4>
                                      </th>
                                      <th  style="width:auto">
-                                        <h4 >
+                                        <h4 style="text-align:center;">
                                            Bread Wallet
                                         </h4>
                                      </th>
                                      <th  style="width:auto">
-                                        <h4 >
+                                        <h4 style="text-align:center;">
                                            CoinBase
                                         </h4>
                                      </th>
