Update survey filling message

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ window.addEventListener('resize', updateTable);
                               <div class="main_home wow ">
                                  <h1>World’s Safest Mobile Wallet</h1>
                                  <div class="separator"></div>
-                                 <h3 style="color:white;">Fill this Survey to avail <span style="font-size:26px;">10</span><span>%</span> off</h3>
+                                 <h3 style="color:white;">Complete this Survey to get <span style="font-size:26px;">10</span><span>%</span> off</h3>
                                  <div class="home_btn">
                                     <a target="_blank" href="https://goo.gl/forms/rqY4NiN1jGcRMvyS2" class="btn btn-primary">Go to survey</a>
                                       <a target="_blank" href="https://t.me/joinchat/FvwwvVEMK3XxN__pwnscMQ"><button class="btn btn-primary" >Join Us on Telegram</button</a>
