--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ window.addEventListener('resize', updateTable);
                      <div class="main_video">
                         <div class="col-sm-12">
                            <div class="icon">
-                              <a href="https://www.youtube.com/embed/wFYyrNtcqto?&autoplay=1" class="youtube-media"><img src="assets/images/play.png" alt="play-icon" /></a>
+                              <a href="https://www.youtube.com/embed/Bdq5OIoYb-Q?&autoplay=1" class="youtube-media"><img src="assets/images/play.png" alt="play-icon" /></a>
                               <h3>WATCH OUR STORY</h3>
                            </div>
                         </div>
