--- a/index.html
+++ b/index.html
@@ -1,56 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Decentralized Recovery System</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
-</head>
-<body>
-	
-	<!--  -->
-	<div class="simpleslide100">
-		<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg01.jpg');"></div>
-		<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg02.jpg');"></div>
-		<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg03.jpg');"></div>
-	</div>
-
-	<div class="flex-col-c-sb size1 overlay1">
+	<head>
+		<title>Decentralized Recovery System</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--===============================================================================================-->
+		<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+		<!--===============================================================================================-->
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="vendor/bootstrap/css/bootstrap.min.css"
+		/>
+		<!--===============================================================================================-->
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"
+		/>
+		<!--===============================================================================================-->
+		<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
+		<!--===============================================================================================-->
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="vendor/select2/select2.min.css"
+		/>
+		<!--===============================================================================================-->
+		<link rel="stylesheet" type="text/css" href="css/util.css" />
+		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<!--===============================================================================================-->
+	</head>
+	<body>
 		<!--  -->
-		<div class="w-full flex-w flex-sb-m p-l-80 p-r-80 p-t-22 p-lr-15-sm">
-			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
-				<a href="#"><img src="images/icons/logo.png" alt="LOGO"></a>
-			</div>
-
-			<div class="flex-w m-t-10 m-b-10">
-				<a href="https://goo.gl/forms/ma0fl1G3mhaDsdLG2" target="_blank" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
-					Sign Up
-				</a>
-			</div>
+		<div class="simpleslide100">
+			<div
+				class="simpleslide100-item bg-img1"
+				style="background-image: url('images/bg01.jpg');"
+			></div>
+			<div
+				class="simpleslide100-item bg-img1"
+				style="background-image: url('images/bg02.jpg');"
+			></div>
+			<div
+				class="simpleslide100-item bg-img1"
+				style="background-image: url('images/bg03.jpg');"
+			></div>
 		</div>
 
-		<!--  -->
-		<div class="flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-120">
+		<div class="flex-col-c-sb size1 overlay1">
+			<!--  -->
+			<div class="w-full flex-w flex-sb-m p-l-80 p-r-80 p-t-22 p-lr-15-sm">
+				<div class="wrappic1 m-r-30 m-t-10 m-b-10">
+					<a href="#"><img src="images/icons/logo.png" alt="LOGO"/></a>
+				</div>
+				<!-- Begin Mailchimp Signup Form -->
 
-			<h3 class="l1-txt1 txt-center p-b-40 respon1">
-				<font size="6"><b>Your Recovery Phrases deserves the same security as your Private Keys</b></font>
-			</h3>
+				<div id="mc_embed_signup">
+					<form
+						action="https://cypherock.us7.list-manage.com/subscribe/post?u=5b8742165f0836d09b8f0df42&amp;id=08e2bb3aeb"
+						method="post"
+						id="mc-embedded-subscribe-form"
+						name="mc-embedded-subscribe-form"
+						class="validate"
+						target="_blank"
+						novalidate
+					>
+						<div id="mc_embed_signup_scroll">
+							<div class="mc-field-group">
+								<input
+									type="email"
+									value=""
+									name="EMAIL"
+									class="signupResponse required email"
+									id="mce-EMAIL"
+									placeholder="Enter your email"
+								/>
+							</div>
+							<div id="mce-responses" class="clear">
+								<div
+									class="response"
+									id="mce-error-response"
+									style="display:none"
+								></div>
+								<div
+									class="response"
+									id="mce-success-response"
+									style="display:none"
+								></div>
+							</div>
+							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div
+								style="position: absolute; left: -5000px;"
+								aria-hidden="true"
+							>
+								<input
+									type="text"
+									name="b_5b8742165f0836d09b8f0df42_08e2bb3aeb"
+									tabindex="-1"
+									value=""
+								/>
+							</div>
+							<div class="clear">
+								<input
+									type="submit"
+									value="SIGN UP"
+									name="subscribe"
+									id="mc-embedded-subscribe"
+									class="button"
+								/>
+							</div>
+						</div>
+					</form>
+				</div>
 
-			<div class="flex-w flex-c-m cd100">
-<!-- 				<div class="flex-col-c wsize1 m-b-30">
+				<!--End mc_embed_signup-->
+			</div>
+
+			<!--  -->
+			<div class="flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-120" id="myText">
+				<h3 class="l1-txt1 txt-center p-b-40 respon1">
+					<font size="6"
+						><b
+							>Your Recovery Phrases deserves the same security as your Private
+							Keys</b
+						></font
+					>
+				</h3>
+
+				<div class="flex-w flex-c-m cd100">
+					<!-- 				<div class="flex-col-c wsize1 m-b-30">
 					<span class="l1-txt2 p-b-9 days">35</span>
 					<span class="s1-txt1 where1 p-l-35">Days</span>
 				</div>
@@ -69,78 +148,104 @@
 					<span class="l1-txt2 p-b-9 seconds">39</span>
 					<span class="s1-txt1 where1 p-l-35">Seconds</span>
 				</div> -->
+				</div>
+			</div>
+
+			<!--  -->
+			<div class="flex-w flex-c-m p-b-35" id="community">
+				<!--<a href="https://www.facebook.com/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+				<i class="fa fa-facebook"></i>
+			</a> -->
+				<a
+					href="https://twitter.com/cypherockwallet"
+					target="_blank"
+					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+				>
+					<i class="fa fa-twitter"></i>
+				</a>
+
+				<!--<a href="https://www.youtube.com/channel/UC9XIWQHUl7lawXgP0LIg5xg" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+				<i class="fa fa-youtube-play"></i>
+			</a> -->
+				<a
+					href="https://www.linkedin.com/company/cypherock"
+					target="_blank"
+					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+				>
+					<i class="fa fa-linkedin"></i>
+				</a>
+				<!--<a href="https://www.reddit.com/r/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+				<i class="fa fa-reddit"></i>
+			</a> -->
+				<a
+					href="https://t.me/joinchat/FvwwvVEMK3XxN__pwnscMQ"
+					target="_blank"
+					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+				>
+					<i class="fa fa-telegram"></i>
+				</a>
+				<a
+					href="mailto:info@cypherock.com"
+					target="_blank"
+					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+				>
+					<i class="fa fa-envelope"></i>
+				</a>
 			</div>
 		</div>
 
-		<!--  -->
-		<div class="flex-w flex-c-m p-b-35">
-			<!--<a href="https://www.facebook.com/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-facebook"></i>
-			</a> -->
-			<a href="https://twitter.com/cypherockwallet" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-twitter"></i>
-			</a>
-
-			<!--<a href="https://www.youtube.com/channel/UC9XIWQHUl7lawXgP0LIg5xg" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-youtube-play"></i>
-			</a> -->
-			<a href="https://www.linkedin.com/company/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-linkedin"></i>
-			</a>
-			<!--<a href="https://www.reddit.com/r/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-reddit"></i>
-			</a> -->
-			<a href="https://t.me/joinchat/FvwwvVEMK3XxN__pwnscMQ" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-telegram"></i>
-			</a>
-			<a href="mailto:info@cypherock.com" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-envelope"></i>
-			</a>
-		</div>
-	</div>
-
-<!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/countdowntime/moment.min.js"></script>
-	<script src="vendor/countdowntime/moment-timezone.min.js"></script>
-	<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
-	<script src="vendor/countdowntime/countdowntime.js"></script>
-	<script>
-		$('.cd100').countdown100({
-			/*Set Endtime here*/
-			/*Endtime must be > current time*/
-			endtimeYear: 0,
-			endtimeMonth: 0,
-			endtimeDate: 35,
-			endtimeHours: 19,
-			endtimeMinutes: 0,
-			endtimeSeconds: 0,
-			timeZone: "" 
-			// ex:  timeZone: "America/New_York"
-			//go to " http://momentjs.com/timezone/ " to get timezone
-		});
-	</script>
-<!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-	<script >
-		$('.js-tilt').tilt({
-			scale: 1.1
-		})
-	</script>
-<!--===============================================================================================-->
-	<script src="js/main.js"></script>
-
-</body>
+		<!--===============================================================================================-->
+		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/bootstrap/js/popper.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/select2/select2.min.js"></script>
+		<!--===============================================================================================-->
+		<script src="vendor/countdowntime/moment.min.js"></script>
+		<script src="vendor/countdowntime/moment-timezone.min.js"></script>
+		<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
+		<script src="vendor/countdowntime/countdowntime.js"></script>
+		<script>
+			$(".cd100").countdown100({
+				/*Set Endtime here*/
+				/*Endtime must be > current time*/
+				endtimeYear: 0,
+				endtimeMonth: 0,
+				endtimeDate: 35,
+				endtimeHours: 19,
+				endtimeMinutes: 0,
+				endtimeSeconds: 0,
+				timeZone: ""
+				// ex:  timeZone: "America/New_York"
+				//go to " http://momentjs.com/timezone/ " to get timezone
+			});
+		</script>
+		<!--===============================================================================================-->
+		<script src="vendor/tilt/tilt.jquery.min.js"></script>
+		<!--================================================================================================-->
+		<script
+			type="text/javascript"
+			src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+		></script>
+		<script type="text/javascript">
+			(function($) {
+				window.fnames = new Array();
+				window.ftypes = new Array();
+				fnames[0] = "EMAIL";
+				ftypes[0] = "email";
+			})(jQuery);
+			var $mcj = jQuery.noConflict(true);
+		</script>
+		<!--================================================================================================-->
+		<script>
+			$(".js-tilt").tilt({
+				scale: 1.1
+			});
+		</script>
+		<!--===============================================================================================-->
+		<script src="js/main.js"></script>
+	</body>
 </html>
 
-Recovery - hotswap
-Bank - 6 figures
-kcash - Achain
-DarkCrystal
-
+Recovery - hotswap Bank - 6 figures kcash - Achain DarkCrystal
