--- a/index.html
+++ b/index.html
@@ -54,56 +54,46 @@
 				<div class="wrappic1 m-r-30 m-t-10 m-b-10">
 					<a href="#"><img src="images/icons/logo.png" alt="LOGO"/></a>
 				</div>
-				<!-- Begin Mailchimp Signup Form -->
-
-				<div id="mc_embed_signup">
-					<form
-						action="https://cypherock.us7.list-manage.com/subscribe/post?u=5b8742165f0836d09b8f0df42&amp;id=08e2bb3aeb"
-						method="post"
-						id="mc-embedded-subscribe-form"
-						name="mc-embedded-subscribe-form"
-						class="validate"
+				<div class="flex-w flex-c-m p-b-35" id="community">
+					<!--<a href="https://www.facebook.com/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+					<i class="fa fa-facebook"></i>
+				</a> -->
+					<a
+						href="https://twitter.com/cypherockwallet"
 						target="_blank"
-						novalidate
+						class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
 					>
-						<div id="mc_embed_signup_scroll">
-							<div class="mc-field-group">
-								<input
-									type="email"
-									value=""
-									name="EMAIL"
-									class="signupResponse required email"
-									id="mce-EMAIL"
-									placeholder="Enter your email"
-								/>
-							</div>
-							
-							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							<div
-								style="position: absolute; left: -5000px;"
-								aria-hidden="true"
-							>
-								<input
-									type="text"
-									name="b_5b8742165f0836d09b8f0df42_08e2bb3aeb"
-									tabindex="-1"
-									value=""
-								/>
-							</div>
-							<div class="clear">
-								<input
-									type="submit"
-									value="SIGN UP"
-									name="subscribe"
-									id="mc-embedded-subscribe"
-									class="button"
-								/>
-							</div>
-						</div>
-					</form>
-				</div>
+						<i class="fa fa-twitter"></i>
+					</a>
 
-				<!--End mc_embed_signup-->
+					<!--<a href="https://www.youtube.com/channel/UC9XIWQHUl7lawXgP0LIg5xg" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+					<i class="fa fa-youtube-play"></i>
+				</a> -->
+					<a
+						href="https://www.linkedin.com/company/cypherock"
+						target="_blank"
+						class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+					>
+						<i class="fa fa-linkedin"></i>
+					</a>
+					<!--<a href="https://www.reddit.com/r/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+					<i class="fa fa-reddit"></i>
+				</a> -->
+					<a
+						href="https://t.me/joinchat/FvwwvVEMK3XxN__pwnscMQ"
+						target="_blank"
+						class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+					>
+						<i class="fa fa-telegram"></i>
+					</a>
+					<a
+						href="mailto:info@cypherock.com"
+						target="_blank"
+						class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
+					>
+						<i class="fa fa-envelope"></i>
+					</a>
+				</div>
 			</div>
 
 			<!--  -->
@@ -116,7 +106,37 @@
 						></font
 					>
 				</h3>
+				<!-- Begin Mailchimp Signup Form -->
 
+				<div id="mc_embed_signup">
+					<form
+						action="https://cypherock.us7.list-manage.com/subscribe/post?u=5b8742165f0836d09b8f0df42&amp;id=08e2bb3aeb"
+						method="post"
+						id="mc-embedded-subscribe-form"
+						name="mc-embedded-subscribe-form"
+						class="validate"
+						target="_blank"
+						novalidate
+					>
+						<input
+							type="email"
+							value=""
+							name="EMAIL"
+							class="signupResponse required email"
+							id="mce-EMAIL"
+							placeholder="Enter your email"
+						/>
+						<input
+							type="submit"
+							value="SIGN UP"
+							name="subscribe"
+							id="mc-embedded-subscribe"
+							class="button"
+						/>
+					</form>
+				</div>
+
+				<!--End mc_embed_signup-->
 				<div class="flex-w flex-c-m cd100">
 					<!-- 				<div class="flex-col-c wsize1 m-b-30">
 					<span class="l1-txt2 p-b-9 days">35</span>
@@ -141,48 +161,21 @@
 			</div>
 
 			<!--  -->
-			<div class="flex-w flex-c-m p-b-35" id="community">
-				<!--<a href="https://www.facebook.com/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-facebook"></i>
-			</a> -->
-				<a
-					href="https://twitter.com/cypherockwallet"
-					target="_blank"
-					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
-				>
-					<i class="fa fa-twitter"></i>
-				</a>
-
-				<!--<a href="https://www.youtube.com/channel/UC9XIWQHUl7lawXgP0LIg5xg" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-youtube-play"></i>
-			</a> -->
-				<a
-					href="https://www.linkedin.com/company/cypherock"
-					target="_blank"
-					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
-				>
-					<i class="fa fa-linkedin"></i>
-				</a>
-				<!--<a href="https://www.reddit.com/r/cypherock" target="_blank" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
-				<i class="fa fa-reddit"></i>
-			</a> -->
-				<a
-					href="https://t.me/joinchat/FvwwvVEMK3XxN__pwnscMQ"
-					target="_blank"
-					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
-				>
-					<i class="fa fa-telegram"></i>
-				</a>
-				<a
-					href="mailto:info@cypherock.com"
-					target="_blank"
-					class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5"
-				>
-					<i class="fa fa-envelope"></i>
-				</a>
-			</div>
 		</div>
-
+		<div class="displayMessage"></div>
+		<script
+			type="text/javascript"
+			src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+		></script>
+		<script type="text/javascript">
+			(function($) {
+				window.fnames = new Array();
+				window.ftypes = new Array();
+				fnames[0] = "EMAIL";
+				ftypes[0] = "email";
+			})(jQuery);
+			var $mcj = jQuery.noConflict(true);
+		</script>
 		<!--===============================================================================================-->
 		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 		<!--===============================================================================================-->
@@ -215,8 +208,8 @@
 		<!--================================================================================================-->
 		<script
 			type="text/javascript"
-			src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
-		</script>
+			src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+		></script>
 		<script type="text/javascript">
 			(function($) {
 				window.fnames = new Array();
@@ -236,5 +229,3 @@
 		<script src="js/main.js"></script>
 	</body>
 </html>
-
-Recovery - hotswap Bank - 6 figures kcash - Achain DarkCrystal
