--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 			<!--  -->
 		</div>
-		<div class="displayMessage"></div>
+		<div class="displayMessage" id="someText"></div>
 		<script
 			type="text/javascript"
 			src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
