--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			></div>
 		</div>
 
-		<div class="flex-col-c-sb size1 overlay1">
+		<div class="wrapperMain overlay1">
 			<!--  -->
-			<div class="w-full flex-w flex-sb-m p-l-80 p-r-80 p-t-22 p-lr-15-sm">
-				<div class="wrappic1 m-r-30 m-t-10 m-b-10">
+			<div class="headerMain">
+				<div class="wrapperImg">
 					<a href="#"><img src="images/icons/logo.png" alt="LOGO"/></a>
 				</div>
 				<div class="flex-w flex-c-m p-b-35" id="community">
@@ -97,8 +97,9 @@
 			</div>
 
 			<!--  -->
-			<div class="flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-120" id="myText">
-				<h3 class="l1-txt1 txt-center p-b-40 respon1">
+
+			<div class="bodyMain" id="myText">
+				<h3 class="dispText l1-txt1 txt-center p-b-40 respon1">
 					<font size="6"
 						><b
 							>Your Recovery Phrases deserves the same security as your Private
