--- a/index.html
+++ b/index.html
@@ -98,13 +98,11 @@
 
 			<!--  -->
 
-			<div class="bodyMain" id="myText">
+			<div class="bodyMain">
 				<h3 class="dispText l1-txt1 txt-center p-b-40 respon1">
-					<font size="6"
-						><b
-							>Your Recovery Phrases deserves the same security as your Private
-							Keys</b
-						></font
+					<b class="myText"
+						>Your Recovery Phrases deserve the same security as your Private
+						Keys</b
 					>
 				</h3>
 				<!-- Begin Mailchimp Signup Form -->
